--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "netflix",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Neha-2701.github.io/netflixa",
+  "homepage": "https://neha-2701.github.io/netflixa",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
